--- a/index.html
+++ b/index.html
@@ -1,85 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Mi Portafolio</title>
-    <link href="styles.css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+<html lang="es">
+	<head>
+		<meta charset="utf-8" />
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<title>Mi Portafolio</title>
+		<link href="styles.css" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
-  <body>
-    <div class="header-img"></div>
-    <div class="header">Juliana Gomez</div>
-    <div class="subtitle">Front End Developer</div>
-    <div class="navigation">
-      <div class="nav-item">Acerca de</div>
-      <div class="nav-item">Mis Proyectos</div>
-      <div class="nav-item">Contacto</div>
-    </div>
+	<body>
+		<header>
+			<div class="header-img"></div>
+			<h1 class="header">Juliana Gomez</h1>
+			<h2 class="subtitle">Front End Developer</h2>
+			<nav class="navigation">
+				<ul>
+					<li class="nav-item"><a href="#">Acerca de</a></li>
+					<li class="nav-item"><a href="#">Mis Proyectos</a></li>
+					<li class="nav-item"><a href="#">Contacto</a></li>
+				</ul>
+			</nav>
+		</header>
 
-    <div class="intro">
-      Hola! Soy Juliana 👋 Soy Colombo-Canadiense, amo los gatos y tambien crear
-      cosas lindas para la web 😍 Después de estudiar comunicación social y
-      ciencia política en la universidad, trabajé varios años en mercadeo
-      digital hasta que aprendí a programar. Llevo un poco más de tres años
-      enfocándome en front end, específicamente en JavaScript y accesibilidad.
-      Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
-      algunos de mis proyectos recientes y también puedes contactarme por si
-      quieres hablar de tecnología, accesibilidad o gatos!
-      <div class="social-media">
-        <div>
-          <a href="https://twitter.com/gmzjuliana" target="_blank"
-            ><img src="images/twitter.png"
-          /></a>
-        </div>
-        <div>
-          <a href="https://github.com/gmzjuliana" target="_blank"
-            ><img src="images/github-logo.png"
-          /></a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/gomezjuliana/" target="_blank"
-            ><img src="images/linkedin.png"
-          /></a>
-        </div>
-      </div>
-    </div>
+		<section class="intro">
+			Hola! Soy Juliana 👋 Soy Colombo-Canadiense, amo los gatos y tambien crear
+			cosas lindas para la web 😍 Después de estudiar comunicación social y
+			ciencia política en la universidad, trabajé varios años en mercadeo
+			digital hasta que aprendí a programar. Llevo un poco más de tres años
+			enfocándome en front end, específicamente en JavaScript y accesibilidad.
+			Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
+			algunos de mis proyectos recientes y también puedes contactarme por si
+			quieres hablar de tecnología, accesibilidad o gatos!
+			<section class="social-media">
+				<div>
+					<a href="https://twitter.com/gmzjuliana" target="_blank"
+						><img src="images/twitter.png" alt="twitter icon"
+					/></a>
+				</div>
+				<div>
+					<a href="https://github.com/gmzjuliana" target="_blank"
+						><img src="images/github-logo.png" alt="github icon"
+					/></a>
+				</div>
+				<div>
+					<a href="https://www.linkedin.com/in/gomezjuliana/" target="_blank"
+						><img src="images/linkedin.png" alt="linkedin icon"
+					/></a>
+				</div>
+			</section>
+		</section>
 
-    <div class="carousel">
-      <div class="arrow arrow-left"></div>
-      <div class="window">
-        <div class="project-container">
-          <div class="project project1"></div>
-          <div class="project project2"></div>
-          <div class="project project3"></div>
-          <div class="project project4"></div>
-          <div class="project project5"></div>
-        </div>
-      </div>
-      <div class="arrow arrow-right"></div>
-    </div>
+		<section class="carousel">
+			<div class="arrow arrow-left"></div>
+			<div class="window">
+				<div class="project-container">
+					<article class="project project1"></article>
+					<article class="project project2"></article>
+					<article class="project project3"></article>
+					<article class="project project4"></article>
+					<article class="project project5"></article>
+				</div>
+			</div>
+			<div class="arrow arrow-right"></div>
+		</section>
 
-    <div class="contact-section">
-      <div class="header">Contacto</div>
-      <div class="form-container">
-        Nombre<input type="text" /> <br />
-        Correo<input type="text" /> <br />
-        <div class="message-input">Mensaje<input type="text" /> <br /></div>
-        <div class="send-button">Enviar</div>
-      </div>
-    </div>
-    <div class="notification">El formulario fue enviado sin errores</div>
-    <div class="modal-container">
-      <div class="modal">
-        Ejemplo de un proyecto mio
-        <div class="modal-project-image"></div>
-      </div>
-    </div>
+		<footer class="contact-section">
+			<h2 class="header">Contacto</h2>
+			<form class="form-container">
+				<label for="name">Nombre</label>
+				<input type="text" id="name" /> <br />
+				<label for="email">Correo</label>
+				<input type="email" id="email" /> <br />
+				<label for="message">Mensaje</label>
+				<input type="text" id="message" class="message-input" /> <br />
+				<button type="button" class="send-button">Enviar</button>
+			</form>
+		</footer>
+		<div class="notification">El formulario fue enviado sin errores</div>
+		<div class="modal-container">
+			<div class="modal">
+				Ejemplo de un proyecto mio
+				<div class="modal-project-image"></div>
+			</div>
+		</div>
 
-    <script src="index.js" type="text/javascript"></script>
-  </body>
+		<script src="index.js" type="text/javascript"></script>
+	</body>
 </html>
