--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 	</head>
 
 	<body>
-		<header>
+		<a href="#main" class="skip-link">Ir al contenido principal</a>
+		<header id="header">
+			<div class="theme-switch-wrapper">
+				<label class="theme-switch" for="checkbox">
+					<input type="checkbox" id="checkbox" />
+					<div class="slider round"></div>
+				</label>
+				<em id="theme-mode"></em>
+			</div>
 			<img
 				src="images/juliana.jpg"
 				class="header-img"
@@ -22,15 +30,15 @@
 			<h2 class="subtitle">Front End Developer</h2>
 			<nav>
 				<ul class="navigation">
-					<li class="nav-item"><a href="#">Acerca de</a></li>
-					<li class="nav-item"><a href="#">Mis Proyectos</a></li>
-					<li class="nav-item"><a href="#">Contacto</a></li>
+					<li class="nav-item"><a href="#about">Acerca de</a></li>
+					<li class="nav-item"><a href="#projects">Mis Proyectos</a></li>
+					<li class="nav-item"><a href="#contact">Contacto</a></li>
 				</ul>
 			</nav>
 		</header>
 
-		<main>
-			<section>
+		<main id="main">
+			<section id="about">
 				<h2 class="header">Acerca de</h2>
 				<p class="intro">
 					Hola! Soy Juliana 👋 Soy Colombo-Canadiense, amo los gatos y tambien
@@ -45,108 +53,132 @@
 				</p>
 				<ul class="social-media">
 					<li>
-						<a href="https://twitter.com/gmzjuliana" target="_blank"
-							><img src="images/twitter.png" alt="twitter icon"
-						/></a>
+						<a
+							class="social-media__link"
+							href="https://twitter.com/gmzjuliana"
+							target="_blank"
+							><img src="images/twitter.png" alt="twitter icon" />
+							<span>Twitter</span>
+						</a>
 					</li>
 					<li>
-						<a href="https://github.com/gmzjuliana" target="_blank"
-							><img src="images/github-logo.png" alt="github icon"
-						/></a>
+						<a
+							class="social-media__link"
+							href="https://github.com/gmzjuliana"
+							target="_blank"
+							><img src="images/github-logo.png" alt="github icon" />
+							<span>GitHub</span>
+						</a>
 					</li>
 					<li>
-						<a href="https://www.linkedin.com/in/gomezjuliana/" target="_blank"
-							><img src="images/linkedin.png" alt="linkedin icon"
-						/></a>
+						<a
+							class="social-media__link"
+							href="https://www.linkedin.com/in/gomezjuliana/"
+							target="_blank"
+							><img src="images/linkedin.png" alt="linkedin icon" />
+							<span>Linkedin</span>
+						</a>
 					</li>
 				</ul>
 			</section>
 
-			<section>
+			<section id="projects">
 				<h2 class="header">Mis Proyectos</h2>
 				<div class="carousel">
-					<div
+					<button
 						class="arrow arrow-left"
-						role="button"
 						aria-label="backward button"
-					></div>
+					></button>
 					<article class="window">
 						<ul class="project-container">
-							<li>
-								<button>
+							<li class="project1-container">
+								<button class="project1 project">
 									<img
 										src="images/project1.png"
-										class="project project1"
+										class="project-img"
 										alt="proyecto 1"
 									/>
 								</button>
 							</li>
-							<li>
-								<button>
+							<li class="project2-container">
+								<button class="project2 project">
 									<img
 										src="images/project2.png"
-										class="project project2"
+										class="project-img"
 										alt="proyecto 2"
 									/>
 								</button>
 							</li>
-							<li>
-								<button>
+							<li class="project3-container">
+								<button class="project3 project">
 									<img
 										src="images/project3.png"
-										class="project project3"
+										class="project-img"
 										alt="proyecto 3"
 									/>
 								</button>
 							</li>
-							<li aria-hidden="true">
-								<button>
+							<li class="project4-container">
+								<button class="project4 project" tabindex="-1">
 									<img
 										src="images/project4.png"
-										class="project project4"
+										class="project-img"
 										alt="proyecto 4"
 									/>
 								</button>
 							</li>
-							<li aria-hidden="true">
-								<button>
+							<li class="project5-container">
+								<button class="project5 project" tabindex="-1">
 									<img
 										src="images/project5.png"
-										class="project project5"
+										class="project-img"
 										alt="proyecto 5"
 									/>
 								</button>
 							</li>
 						</ul>
 					</article>
-					<div
+					<button
 						class="arrow arrow-right"
-						role="button"
 						aria-label="forward button"
-					></div>
+					></button>
 				</div>
 			</section>
 		</main>
 
-		<footer class="contact-section">
+		<footer class="contact-section" id="contact">
 			<h2 class="header">Contacto</h2>
 			<form class="form-container">
 				<label for="name">Nombre</label>
-				<input type="text" id="name" /> <br />
+				<input type="text" id="name" aria-required="true" /> <br />
+				<span id="name-error" aria-live="assertive"></span>
 				<label for="email">Correo</label>
-				<input type="email" id="email" /> <br />
+				<input type="email" id="email" aria-required="true" /> <br />
+				<span id="email-error"></span>
 				<label for="message">Mensaje</label>
-				<input type="text" id="message" class="message-input" /> <br />
-				<button type="button" class="send-button">Enviar</button>
+				<input type="text" id="message" class="message-input" />
+				<br />
+				<input type="submit" class="send-button" value="Enviar" />
 			</form>
 		</footer>
-		<div class="notification">El formulario fue enviado sin errores</div>
+
+		<div class="notification" aria-live="assertive"></div>
+
 		<div class="modal-container">
 			<div class="modal">
-				Ejemplo de un proyecto mio
-				<div class="modal-project-image"></div>
+				<h2 class="modal-header header" id="modal-header" tabindex="0">
+					Ejemplo de un proyecto mio
+				</h2>
+				<img
+					class="modal-project-image"
+					id="modal-project-image"
+					alt="project screenshot"
+				/>
+				<button class="modal-exit-btn" id="modal-exit-btn">Cerrar</button>
 			</div>
 		</div>
+
+		<button class="back-to-top"><a href="#header">^</a></button>
 
 		<script src="index.js" type="text/javascript"></script>
 	</body>
